# dep-tracer-mcp

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
helpers/hie-reader/: flake.nix  hie-reader.cabal
helpers/hie-reader/src/: Main.hs
src/: index.ts
src/db/: backend.ts  database.ts  native-backend.ts  schema.ts  sqljs-backend.ts
src/graph/: formatter.ts  traversal.ts
src/handlers/: index-handlers.ts  inspect-handlers.ts  query-handlers.ts
src/indexers/: incremental.ts  types.ts
src/indexers/haskell/: hie-indexer.ts  import-resolver.ts  source-parser.ts
src/indexers/rescript/: bs-js-indexer.ts  module-resolver.ts  res-parser.ts
src/tools/: definitions.ts
src/utils/: logger.ts  process.ts
