cabal-version: 2.4
name:          hie-reader
version:       0.1.0.0
synopsis:      Reads GHC .hie files and outputs NDJSON for dependency tracing
license:       MIT
build-type:    Simple

executable hie-reader
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
    base            >= 4.16 && < 5,
    ghc             >= 9.2  && < 9.3,
    ghc-paths       >= 0.1,
    aeson           >= 2.0,
    bytestring      >= 0.11,
    containers      >= 0.6,
    directory       >= 1.3,
    filepath        >= 1.4,
    text            >= 1.2
